--- a/week2/style.css
+++ b/week2/style.css
@@ -1,30 +1,21 @@
 .container {
-	grid-template-columns: repeat(12, 102px [col-start]);
-	grid-template-rows: repeat(6, 20px [row-start]);
-	column-gap: 16px;
-	row-gap: 16px;
+width: 100%;
+display:flex;
 }
 
-img {
-	display:inline-block;
-	max-width: 60vw;
+.img {
+	align-self: flex-start;
+	max-width: 40vw;
     padding: 20px;
+	position: flex;
 }
-body{
-	width: 100vw;
-    height: 100vh;
+.text{
+	margin-right: 5vw;
+	flex: 1 1 auto;
 	font-size: 20px;
 	font-family: gimlet-text, serif;
 	font-weight: 500;
 	font-style: normal;
     line-height: 1.4;
     max-width: 60%;
-}
-
-footer{
-    margin: 50px;
-    padding: 50px;
-    border-top: solid;
-    text-align: center;
-
 }
